--- a/src/sections/login.html
+++ b/src/sections/login.html
@@ -1,3 +1,11 @@
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+<script src="../config/firebaseConfig.js"></script>
+<script>const firebase = require("firebase/app");</script>
+<script>require("firebase/auth");</script>
+<script>const firebaseConfig = require('./src/config/firebaseConfig.js');</script>
+<script>firebase.initializeApp(firebaseConfig);</script>
+
 <div id="login-form">
     <h2>Login</h2>
     <form id="loginForm">
@@ -15,3 +23,42 @@
 
     </form>
 </div>
+
+<script>
+    import firebase from "firebase/compat";
+
+    document.getElementById('loginForm').addEventListener('submit', function(event) {
+        event.preventDefault(); // Запобігаємо стандартній поведінці форми
+
+        var email = document.getElementById('loginUsername').value;
+        var password = document.getElementById('loginPassword').value;
+
+        firebase.auth().signInWithEmailAndPassword(email, password)
+            .then((userCredential) => {
+                // Успішний вхід
+                console.log("User logged in successfully");
+                var user = userCredential.user;
+                // Можливо, перенаправити користувача на іншу сторінку або показати успішне повідомлення
+            })
+            .catch((error) => {
+                var errorCode = error.code;
+                var errorMessage = error.message;
+                console.error("Error during login: ", errorCode, errorMessage);
+                // Показати повідомлення про помилку користувачу
+            });
+    });
+
+    firebase.auth().onAuthStateChanged((user) => {
+        if (user) {
+            console.log("User is signed in:", user);
+            // Користувач увійшов у систему
+            // Перенаправлення на головну сторінку
+            mainWindow.loadURL('file://' + __dirname + '/home.html');
+        } else {
+            console.log("No user is signed in.");
+            // Користувач вийшов з системи або сесія не була ініційована
+            // Показ форми входу
+            mainWindow.loadURL('file://' + __dirname + '/login.html');
+        }
+    });
+</script>
