--- a/src/sections/register.html
+++ b/src/sections/register.html
@@ -1,10 +1,10 @@
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+<script src="../config/firebaseConfig.js"></script>
+
 <div id="registration-form">
     <h2>Register</h2>
     <form id="registerForm">
-        <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-        </div>
         <div class="form-group">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
@@ -18,3 +18,40 @@
         </div>
     </form>
 </div>
+
+<script>
+    document.getElementById('registerForm').addEventListener('submit', function(event) {
+        event.preventDefault(); // Запобігаємо стандартній поведінці форми
+
+        var email = document.getElementById('email').value;
+        var password = document.getElementById('password').value;
+
+        firebase.auth().createUserWithEmailAndPassword(email, password)
+            .then((userCredential) => {
+                // Успішна реєстрація
+                console.log("User registered successfully");
+                var user = userCredential.user;
+                // Можливо, перенаправити користувача на іншу сторінку або показати успішне повідомлення
+            })
+            .catch((error) => {
+                var errorCode = error.code;
+                var errorMessage = error.message;
+                console.error("Error during registration: ", errorCode, errorMessage);
+                // Показати повідомлення про помилку користувачу
+            });
+    });
+
+    firebase.auth().onAuthStateChanged((user) => {
+        if (user) {
+            console.log("User is signed in:", user);
+            // Користувач увійшов у систему
+            // Ви маєте перенаправити користувача на головну сторінку або сторінку профілю
+            mainWindow.loadURL('file://' + __dirname + '/home.html');
+        } else {
+            console.log("No user is signed in.");
+            // Користувач вийшов з системи або сесія не була ініційована
+            // Показ форми входу
+            mainWindow.loadURL('file://' + __dirname + '/login.html');
+        }
+    });
+</script>
